--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==20.0.4
 selenium==4.1.3
 
 google-cloud-storage==2.3.0
+google-cloud-logging
 google-auth==1.32.1
 pandas==1.3.0
 pyarrow==6.0.1
